# app/Http/Controllers/Api/UsersController.php
@@ -2,6 +2,7 @@
 
 namespace App\Http\Controllers\Api;
 
+use App\Domain\Users\DTO\UserDTO;
 use App\Http\Requests\JWTRequest;
 use App\Http\Requests\UserRequest;
 use App\Domain\Users\UsersManager;
@@ -13,7 +14,7 @@ use Exception;
 class UsersController extends Controller
 {
     public function __construct(
-        private  UsersManager $manager
+        private UsersManager $manager
     ) {
     }
 
@@ -161,6 +162,58 @@ class UsersController extends Controller
     public function logout(): void
     {
         $this->manager->logOut();
+    }
+
+    /**
+     * @param UserRequest $request
+     * @return User
+     *
+     * @OA\Post(
+     *      path = "/api/create",
+     *      summary = "Токен",
+     *      description = "Логин по токену",
+     *      tags = {"Токен"},
+     *
+     *      @OA\Parameter(
+     *          name = "firstName",
+     *          in = "query",
+     *           @OA\Schema(
+     *              type = "string",
+     *           )
+     *       ),
+     *      @OA\Parameter(
+     *           name = "firstName",
+     *           in = "query",
+     *            @OA\Schema(
+     *               type = "string",
+     *            )
+     *        ),
+     *      @OA\Parameter(
+     *           name = "firstName",
+     *           in = "query",
+     *            @OA\Schema(
+     *               type = "string",
+     *            )
+     *        ),
+     *      @OA\Response(
+     *           response = 200,
+     *           description = "Успешно",
+     *       ),
+     *      @OA\Response(
+     *          response = 401,
+     *          description = "Пользователь не авторизован"
+     *      )
+     *  )
+     */
+    public function createUser(UserRequest $request): User
+    {
+        $createSettings = $request->validate([
+            'firstName' => ['required', 'max:255'],
+            'lastName' => ['required', 'max:255'],
+            'email' => ['required', 'max:255'],
+        ]);
+        $userDTO = new UserDTO(...$createSettings);
+        return $this->manager->create($userDTO);
     }
 
 }
